--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "dotenv": "^17.2.3",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^16.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
