--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack -H localhost -p 3000",
+    "dev:alt": "next dev --webpack -H 127.0.0.1 -p 3001",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
     "db:push": "drizzle-kit push",
@@ -12,7 +13,7 @@
     "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.0",
+    "@clerk/nextjs": "^6.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.0.5",
@@ -26,7 +27,7 @@
     "epubjs": "^0.3.93",
     "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
-    "next": "^14.2.35",
+    "next": "^16.1.5",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.449",
     "postgres": "^3.4.3",
@@ -43,7 +44,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "dotenv": "^17.2.3",
-    "drizzle-kit": "^0.31.8",
+    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "^16.1.4",
     "postcss": "^8",
